Integrated aicollective.tech

--- a/index.html
+++ b/index.html
@@ -1,30 +1,40 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/index.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/src/index.css" />
 
-    <title>PM Collective – Find Your Perfect Product Management Buddy</title>
-    <meta name="description" content="PM Collective helps aspiring and experienced product managers connect, practice case interviews, and learn together. Join our community to accelerate your PM journey with real AI product courses and smart buddy matching." />
-    <meta name="keywords" content="Product Management, PM, Case Interview, Buddy Finder, AI Product Management, PM Collective, Product Manager, Practice, Courses, MAANG, Networking" />
-    <meta name="author" content="PM Collective" />
+  <title>PM Collective – Master PM Skills & Connect with PM Innovators</title>
+  <meta name="description" content="PM Collective connects PM enthusiasts, developers, and innovators to learn, practice, and build the future of PM products. Join our community for PM-focused courses, mentorship, and collaborative learning." />
+  <meta name="keywords" content="Artificial Intelligence, PM DeveloPMent, Machine Learning, PM Products, PM Community, PM Courses, PM Mentorship, PM Innovation, Deep Learning, PM Collective, PM Networking, PM Career" />
+  <meta name="author" content="PM Collective" />
 
-    <!-- Open Graph / Facebook (no image) -->
-    <meta property="og:title" content="PM Collective – Find Your Perfect Product Management Buddy" />
-    <meta property="og:description" content="Connect with aspiring and experienced product managers. Practice cases, chat, and learn with mentor-led AI product courses." />
-    <meta property="og:url" content="https://yourdomain.com/" />
-    <meta property="og:type" content="website" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="PM Collective – Master PM Product DeveloPMent & Connect with PM Innovators" />
+  <meta property="og:description" content="Connect with PM developers, researchers, and innovators. Learn cutting-edge PM techniques, build PM products, and advance your PM career with expert-led courses." />
+  <meta property="og:url" content="https://pmcollective.tech/" />
+  <meta property="og:type" content="website" />
 
-    <!-- Twitter (no image) -->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="PM Collective – Find Your Perfect Product Management Buddy" />
-    <meta name="twitter:description" content="Connect, practice, and learn with the best PMs. Join PM Collective for AI product courses and smart buddy matching." />
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="PM Collective – Master PM Product DeveloPMent & Connect with PM Innovators" />
+  <meta name="twitter:description" content="Join the leading community for PM learning. Connect with PM experts, build innovative PM products, and accelerate your PM journey." />
 
-    <link rel="canonical" href="https://pmcollective.tech/" />
-  </head>
+  <link rel="canonical" href="https://pmcollective.tech/" />
+
+  <!-- ✅ Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0RMED4FDCW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-0RMED4FDCW');
+  </script>
+</head>
+
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+<script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
